y.output
Terminals unused in grammar

    AND
    OR


State 10 conflicts: 1 shift/reduce
State 36 conflicts: 10 shift/reduce
State 88 conflicts: 4 shift/reduce


Grammar

    0 $accept: program $end

    1 program: headers main '(' ')' '{' body return '}'

    2 headers: headers headers

    3 $@1: %empty

    4 headers: INCLUDE $@1

    5 main: datatype ID

    6 datatype: INT
    7         | FLOAT
    8         | CHAR
    9         | VOID

   10 $@2: %empty

   11 body: FOR $@2 '(' statement ';' condition ';' statement ')' '{' body '}'

   12 $@3: %empty

   13 $@4: %empty

   14 $@5: %empty

   15 body: IF $@3 '(' condition ')' $@4 '{' body '}' $@5 else
   16     | statement ';'
   17     | body body

   18 $@6: %empty

   19 body: PRINTFF $@6 '(' STR ')' ';'

   20 $@7: %empty

   21 body: SCANFF $@7 '(' STR ',' '&' ID ')' ';'

   22 $@8: %empty

   23 else: ELSE $@8 '{' body '}'
   24     | %empty

   25 condition: value relop value
   26          | TRUE
   27          | FALSE
   28          | %empty

   29 $@9: %empty

   30 statement: datatype ID $@9 init

   31 $@10: %empty

   32 statement: ID $@10 '=' expression

   33 $@11: %empty

   34 statement: ID $@11 relop expression

   35 $@12: %empty

   36 statement: ID $@12 UNARY
   37          | UNARY ID

   38 init: '=' value
   39     | %empty

   40 expression: expression arithmetic expression
   41           | value

   42 arithmetic: ADD
   43           | SUBTRACT
   44           | MULTIPLY
   45           | DIVIDE

   46 relop: LT
   47      | GT
   48      | LE
   49      | GE
   50      | EQ
   51      | NE

   52 value: NUMBER
   53      | FLOAT_NUM
   54      | ID

   55 $@13: %empty

   56 return: RETURN $@13 value ';'
   57       | %empty


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 21
    '(' (40) 1 11 15 19 21
    ')' (41) 1 11 15 19 21
    ',' (44) 21
    ';' (59) 11 16 19 21 56
    '=' (61) 32 38
    '{' (123) 1 11 15 23
    '}' (125) 1 11 15 23
    error (256)
    VOID (258) 9
    PRINTFF <nam> (259) 19
    SCANFF <nam> (260) 21
    INT <nam> (261) 6
    FLOAT <nam> (262) 7
    CHAR <nam> (263) 8
    FOR <nam> (264) 11
    IF <nam> (265) 15
    ELSE <nam> (266) 23
    TRUE <nam> (267) 26
    FALSE <nam> (268) 27
    NUMBER <nam> (269) 52
    FLOAT_NUM <nam> (270) 53
    ID <nam> (271) 5 21 30 32 34 36 37 54
    LE <nam> (272) 48
    GE <nam> (273) 49
    EQ <nam> (274) 50
    NE <nam> (275) 51
    GT <nam> (276) 47
    LT <nam> (277) 46
    AND <nam> (278)
    OR <nam> (279)
    STR <nam> (280) 19 21
    ADD <nam> (281) 42
    MULTIPLY <nam> (282) 44
    DIVIDE <nam> (283) 45
    SUBTRACT <nam> (284) 43
    UNARY <nam> (285) 36 37
    INCLUDE <nam> (286) 4
    RETURN <nam> (287) 56


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    program <nam> (42)
        on left: 1
        on right: 0
    headers <nam> (43)
        on left: 2 4
        on right: 1 2
    $@1 (44)
        on left: 3
        on right: 4
    main <nam> (45)
        on left: 5
        on right: 1
    datatype <nam> (46)
        on left: 6 7 8 9
        on right: 5 30
    body <nam> (47)
        on left: 11 15 16 17 19 21
        on right: 1 11 15 17 23
    $@2 (48)
        on left: 10
        on right: 11
    $@3 (49)
        on left: 12
        on right: 15
    $@4 (50)
        on left: 13
        on right: 15
    $@5 (51)
        on left: 14
        on right: 15
    $@6 (52)
        on left: 18
        on right: 19
    $@7 (53)
        on left: 20
        on right: 21
    else <nam> (54)
        on left: 23 24
        on right: 15
    $@8 (55)
        on left: 22
        on right: 23
    condition <nam3> (56)
        on left: 25 26 27 28
        on right: 11 15
    statement <nam> (57)
        on left: 30 32 34 36 37
        on right: 11 16
    $@9 (58)
        on left: 29
        on right: 30
    $@10 (59)
        on left: 31
        on right: 32
    $@11 (60)
        on left: 33
        on right: 34
    $@12 (61)
        on left: 35
        on right: 36
    init <nam2> (62)
        on left: 38 39
        on right: 30
    expression <nam2> (63)
        on left: 40 41
        on right: 32 34 40
    arithmetic <nam> (64)
        on left: 42 43 44 45
        on right: 40
    relop <nam> (65)
        on left: 46 47 48 49 50 51
        on right: 25 34
    value <nam2> (66)
        on left: 52 53 54
        on right: 25 38 41 56
    return <nam> (67)
        on left: 56 57
        on right: 1
    $@13 (68)
        on left: 55
        on right: 56


State 0

    0 $accept: . program $end

    INCLUDE  shift, and go to state 1

    program  go to state 2
    headers  go to state 3


State 1

    4 headers: INCLUDE . $@1

    $default  reduce using rule 3 ($@1)

    $@1  go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: headers . main '(' ')' '{' body return '}'
    2 headers: headers . headers

    VOID     shift, and go to state 6
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    INCLUDE  shift, and go to state 1

    headers   go to state 10
    main      go to state 11
    datatype  go to state 12


State 4

    4 headers: INCLUDE $@1 .

    $default  reduce using rule 4 (headers)


State 5

    0 $accept: program $end .

    $default  accept


State 6

    9 datatype: VOID .

    $default  reduce using rule 9 (datatype)


State 7

    6 datatype: INT .

    $default  reduce using rule 6 (datatype)


State 8

    7 datatype: FLOAT .

    $default  reduce using rule 7 (datatype)


State 9

    8 datatype: CHAR .

    $default  reduce using rule 8 (datatype)


State 10

    2 headers: headers . headers
    2        | headers headers .

    INCLUDE  shift, and go to state 1

    INCLUDE   [reduce using rule 2 (headers)]
    $default  reduce using rule 2 (headers)

    headers  go to state 10


State 11

    1 program: headers main . '(' ')' '{' body return '}'

    '('  shift, and go to state 13


State 12

    5 main: datatype . ID

    ID  shift, and go to state 14


State 13

    1 program: headers main '(' . ')' '{' body return '}'

    ')'  shift, and go to state 15


State 14

    5 main: datatype ID .

    $default  reduce using rule 5 (main)


State 15

    1 program: headers main '(' ')' . '{' body return '}'

    '{'  shift, and go to state 16


State 16

    1 program: headers main '(' ')' '{' . body return '}'

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    datatype   go to state 23
    body       go to state 24
    statement  go to state 25


State 17

   19 body: PRINTFF . $@6 '(' STR ')' ';'

    $default  reduce using rule 18 ($@6)

    $@6  go to state 26


State 18

   21 body: SCANFF . $@7 '(' STR ',' '&' ID ')' ';'

    $default  reduce using rule 20 ($@7)

    $@7  go to state 27


State 19

   11 body: FOR . $@2 '(' statement ';' condition ';' statement ')' '{' body '}'

    $default  reduce using rule 10 ($@2)

    $@2  go to state 28


State 20

   15 body: IF . $@3 '(' condition ')' $@4 '{' body '}' $@5 else

    $default  reduce using rule 12 ($@3)

    $@3  go to state 29


State 21

   32 statement: ID . $@10 '=' expression
   34          | ID . $@11 relop expression
   36          | ID . $@12 UNARY

    UNARY     reduce using rule 35 ($@12)
    '='       reduce using rule 31 ($@10)
    $default  reduce using rule 33 ($@11)

    $@10  go to state 30
    $@11  go to state 31
    $@12  go to state 32


State 22

   37 statement: UNARY . ID

    ID  shift, and go to state 33


State 23

   30 statement: datatype . ID $@9 init

    ID  shift, and go to state 34


State 24

    1 program: headers main '(' ')' '{' body . return '}'
   17 body: body . body

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22
    RETURN   shift, and go to state 35

    $default  reduce using rule 57 (return)

    datatype   go to state 23
    body       go to state 36
    statement  go to state 25
    return     go to state 37


State 25

   16 body: statement . ';'

    ';'  shift, and go to state 38


State 26

   19 body: PRINTFF $@6 . '(' STR ')' ';'

    '('  shift, and go to state 39


State 27

   21 body: SCANFF $@7 . '(' STR ',' '&' ID ')' ';'

    '('  shift, and go to state 40


State 28

   11 body: FOR $@2 . '(' statement ';' condition ';' statement ')' '{' body '}'

    '('  shift, and go to state 41


State 29

   15 body: IF $@3 . '(' condition ')' $@4 '{' body '}' $@5 else

    '('  shift, and go to state 42


State 30

   32 statement: ID $@10 . '=' expression

    '='  shift, and go to state 43


State 31

   34 statement: ID $@11 . relop expression

    LE  shift, and go to state 44
    GE  shift, and go to state 45
    EQ  shift, and go to state 46
    NE  shift, and go to state 47
    GT  shift, and go to state 48
    LT  shift, and go to state 49

    relop  go to state 50


State 32

   36 statement: ID $@12 . UNARY

    UNARY  shift, and go to state 51


State 33

   37 statement: UNARY ID .

    $default  reduce using rule 37 (statement)


State 34

   30 statement: datatype ID . $@9 init

    $default  reduce using rule 29 ($@9)

    $@9  go to state 52


State 35

   56 return: RETURN . $@13 value ';'

    $default  reduce using rule 55 ($@13)

    $@13  go to state 53


State 36

   17 body: body . body
   17     | body body .

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    VOID      [reduce using rule 17 (body)]
    PRINTFF   [reduce using rule 17 (body)]
    SCANFF    [reduce using rule 17 (body)]
    INT       [reduce using rule 17 (body)]
    FLOAT     [reduce using rule 17 (body)]
    CHAR      [reduce using rule 17 (body)]
    FOR       [reduce using rule 17 (body)]
    IF        [reduce using rule 17 (body)]
    ID        [reduce using rule 17 (body)]
    UNARY     [reduce using rule 17 (body)]
    $default  reduce using rule 17 (body)

    datatype   go to state 23
    body       go to state 36
    statement  go to state 25


State 37

    1 program: headers main '(' ')' '{' body return . '}'

    '}'  shift, and go to state 54


State 38

   16 body: statement ';' .

    $default  reduce using rule 16 (body)


State 39

   19 body: PRINTFF $@6 '(' . STR ')' ';'

    STR  shift, and go to state 55


State 40

   21 body: SCANFF $@7 '(' . STR ',' '&' ID ')' ';'

    STR  shift, and go to state 56


State 41

   11 body: FOR $@2 '(' . statement ';' condition ';' statement ')' '{' body '}'

    VOID   shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8
    CHAR   shift, and go to state 9
    ID     shift, and go to state 21
    UNARY  shift, and go to state 22

    datatype   go to state 23
    statement  go to state 57


State 42

   15 body: IF $@3 '(' . condition ')' $@4 '{' body '}' $@5 else

    TRUE       shift, and go to state 58
    FALSE      shift, and go to state 59
    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    $default  reduce using rule 28 (condition)

    condition  go to state 63
    value      go to state 64


State 43

   32 statement: ID $@10 '=' . expression

    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    expression  go to state 65
    value       go to state 66


State 44

   48 relop: LE .

    $default  reduce using rule 48 (relop)


State 45

   49 relop: GE .

    $default  reduce using rule 49 (relop)


State 46

   50 relop: EQ .

    $default  reduce using rule 50 (relop)


State 47

   51 relop: NE .

    $default  reduce using rule 51 (relop)


State 48

   47 relop: GT .

    $default  reduce using rule 47 (relop)


State 49

   46 relop: LT .

    $default  reduce using rule 46 (relop)


State 50

   34 statement: ID $@11 relop . expression

    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    expression  go to state 67
    value       go to state 66


State 51

   36 statement: ID $@12 UNARY .

    $default  reduce using rule 36 (statement)


State 52

   30 statement: datatype ID $@9 . init

    '='  shift, and go to state 68

    $default  reduce using rule 39 (init)

    init  go to state 69


State 53

   56 return: RETURN $@13 . value ';'

    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    value  go to state 70


State 54

    1 program: headers main '(' ')' '{' body return '}' .

    $default  reduce using rule 1 (program)


State 55

   19 body: PRINTFF $@6 '(' STR . ')' ';'

    ')'  shift, and go to state 71


State 56

   21 body: SCANFF $@7 '(' STR . ',' '&' ID ')' ';'

    ','  shift, and go to state 72


State 57

   11 body: FOR $@2 '(' statement . ';' condition ';' statement ')' '{' body '}'

    ';'  shift, and go to state 73


State 58

   26 condition: TRUE .

    $default  reduce using rule 26 (condition)


State 59

   27 condition: FALSE .

    $default  reduce using rule 27 (condition)


State 60

   52 value: NUMBER .

    $default  reduce using rule 52 (value)


State 61

   53 value: FLOAT_NUM .

    $default  reduce using rule 53 (value)


State 62

   54 value: ID .

    $default  reduce using rule 54 (value)


State 63

   15 body: IF $@3 '(' condition . ')' $@4 '{' body '}' $@5 else

    ')'  shift, and go to state 74


State 64

   25 condition: value . relop value

    LE  shift, and go to state 44
    GE  shift, and go to state 45
    EQ  shift, and go to state 46
    NE  shift, and go to state 47
    GT  shift, and go to state 48
    LT  shift, and go to state 49

    relop  go to state 75


State 65

   32 statement: ID $@10 '=' expression .
   40 expression: expression . arithmetic expression

    ADD       shift, and go to state 76
    MULTIPLY  shift, and go to state 77
    DIVIDE    shift, and go to state 78
    SUBTRACT  shift, and go to state 79

    $default  reduce using rule 32 (statement)

    arithmetic  go to state 80


State 66

   41 expression: value .

    $default  reduce using rule 41 (expression)


State 67

   34 statement: ID $@11 relop expression .
   40 expression: expression . arithmetic expression

    ADD       shift, and go to state 76
    MULTIPLY  shift, and go to state 77
    DIVIDE    shift, and go to state 78
    SUBTRACT  shift, and go to state 79

    $default  reduce using rule 34 (statement)

    arithmetic  go to state 80


State 68

   38 init: '=' . value

    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    value  go to state 81


State 69

   30 statement: datatype ID $@9 init .

    $default  reduce using rule 30 (statement)


State 70

   56 return: RETURN $@13 value . ';'

    ';'  shift, and go to state 82


State 71

   19 body: PRINTFF $@6 '(' STR ')' . ';'

    ';'  shift, and go to state 83


State 72

   21 body: SCANFF $@7 '(' STR ',' . '&' ID ')' ';'

    '&'  shift, and go to state 84


State 73

   11 body: FOR $@2 '(' statement ';' . condition ';' statement ')' '{' body '}'
